--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,12 +1,12 @@
 .route-context{
     margin-top: 20px;
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: rgb(0,0,0,0.5);
     color: white;
     border-radius: 15px;
 }
 
 .route-context .inside{
-    padding: 50px;
+    padding: 50px 50px 100px 50px;
 }
