Book's_API & Modal_View(Adv) & Button_Spinner & PropTypes_lib & Initial_Search & Using_Lifecycles_Methods & Additional_Things_Style_Perfomance

--- a/src/components/login-page/login-page.css
+++ b/src/components/login-page/login-page.css
@@ -22,7 +22,7 @@
 }
 
 .btn-login-page button{
-    width: 6%;
+    width: 9%;
     padding: 5px;
     border-style: none;
     color: #fff;
@@ -34,8 +34,16 @@
 }
 
 .btn-login-page button:hover{
-    width: 10%;
+    width: 11%;
     color:  #51a3a3;
     background-color: #fff;
     cursor: pointer;
+}
+
+.btn-login-page span{
+    color: white;
+}
+
+.btn-login-page:hover span{
+    color: #51a3a3;
 }
