--- a/src/components/section-welcome-data/section-greeting-data.css
+++ b/src/components/section-welcome-data/section-greeting-data.css
@@ -89,7 +89,7 @@
 .arrow-to-form{
     display: flex;
     justify-content: center;
-    margin: -83px 0 0 310px;
+
 }
 
 /*----- ANIMATION FOR BUTTON FORM -----*/
@@ -122,3 +122,29 @@
   @-moz-keyframes pulse {to {box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);}}
   @-ms-keyframes pulse {to {box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);}}
   @keyframes pulse {to {box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);}}
+
+ .wrapper-select{
+    position: absolute;
+    right: 3%;
+    border: 1px solid white;
+    border-radius: 5px;
+ }
+
+   .wrapper-select select {
+    background: transparent;
+    color: white;
+    height: 34px;
+    padding: 5px;
+    border: 0;
+    font-size: 14px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    width: 65px;
+    cursor: pointer;
+   }
+
+   option{
+        background-color: #292929;
+   }
