--- a/src/components/section-welcome-data/section-greeting-data.css
+++ b/src/components/section-welcome-data/section-greeting-data.css
@@ -83,13 +83,16 @@
 /*----- TEXT AND ARROW TO BUTTON -----*/
 
 .button_send_request p{
-    margin: 35px 0 20px 0;
+    margin: 35px 0 20px 30px;
 }
 
 .arrow-to-form{
     display: flex;
-    justify-content: center;
+    justify-content: center;   
+}
 
+.arrow-to-form img{
+     margin-top: 50px;
 }
 
 /*----- ANIMATION FOR BUTTON FORM -----*/
