--- a/src/components/video-player/video-player.css
+++ b/src/components/video-player/video-player.css
@@ -1,6 +1,7 @@
 .player-wrapper {
     position: relative;
     padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
+    margin-bottom: -30%;
   }
 
   .react-player {
@@ -8,7 +9,12 @@
     top: 5%;
     left: 30%;
     right: 30%;
-    border: 1.5px solid greenyellow;
+    border: 2px solid white;
+    transition: 5s;
+  }
+
+  .react-player:hover{
+    border: 2px solid greenyellow;
   }
 
   .player{
